--- a/src/style.css
+++ b/src/style.css
@@ -8,6 +8,7 @@
 
 /* Formato títulos */
 h1 {
+  margin-top: 10px;
   background-color: #b9b9b9;
   line-height: 2.2em;
   text-align: center;
@@ -51,10 +52,10 @@ h4 {
 
 /* configuración de tema de fondo */
 body {
-  background-image: url(../img/backgrounds/restaurant_icons.png);
+  
+  background-image: url(../restaurant.png);
   background-repeat: repeat;
-  background-attachment: scroll;
-  margin: 10px 0;
+  background-attachment: scroll;  
 }
 
 /* márgenes de los trextos */
@@ -68,6 +69,7 @@ p {
 /* formato fuente hipervínculos */
 a {
   margin-top: 0px;
+  color: white;
   font-size: 1em;
   font-weight: normal;
   text-decoration: none;
@@ -80,6 +82,16 @@ a {
   border-radius: 5%;
   margin: 10px;
   padding: 10px;
+  object-fit: cover;
+  align-items: center;
+}
+
+.smallimagebox {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin: 5px;
+  padding: 5px;
   object-fit: cover;
   align-items: center;
 }
@@ -148,6 +160,7 @@ a {
 /* formato menú nav */
 nav {
   background-color: #1d1d1f;
+  position:fixed;
   width: 100%;
 }
 
